k8s ready