@@ -1,5 +1,7 @@
 # We select the base image from. Locally available or from https://hub.docker.com/
-FROM openjdk:8-jre-alpine
+FROM alpine:3.11
+
+RUN apk add openjdk11
 
 # We define the user we will use in this instance to prevent using root that even in a container, can be a security risk.
 ENV APPLICATION_USER ktor
@@ -13,8 +15,8 @@ RUN chown -R $APPLICATION_USER /app
 USER $APPLICATION_USER
 
 # We copy the FAT Jar we built into the /app folder and sets that folder as the working directory.
-COPY ./build/libs/equestion-1.3.jar /app/equestion-1.3.jar
+COPY ./build/libs/funWithSpringboot-0.0.1-SNAPSHOT.jar /app/myapp.jar
 WORKDIR /app
 
 # We launch java to execute the jar, with good defauls intended for containers.
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "equestion-1.3.jar"]
+CMD ["java", "-jar", "myapp.jar"]
